--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="whiteshadow">#e8e8e8</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#483649</color>
+    <color name="light_black">#555</color>
     <color name="blackshadow">#797979</color>
     <color name="grey">#9d9d9c</color>
     <color name="green">#56bf52</color>
