--- a/app/src/main/res/layout/home_2_category.xml
+++ b/app/src/main/res/layout/home_2_category.xml
@@ -23,7 +23,14 @@
             android:layout_above="@+id/navigation"
             android:layout_below="@+id/toolbar"
             android:orientation="vertical">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:orientation="horizontal">
 
+
+
+</LinearLayout>
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
