--- a/app/src/main/res/layout/home_category.xml
+++ b/app/src/main/res/layout/home_category.xml
@@ -34,7 +34,8 @@
                 android:text="Sort"
                 android:textAllCaps="false"
                 android:textColor="@color/blackshadow"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:drawableLeft="@drawable/mail"/>
 
 
             <Button
