--- a/app/src/main/res/layout/wishlist_main.xml
+++ b/app/src/main/res/layout/wishlist_main.xml
@@ -1,183 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ord_itHomePage"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
-    android:background="@drawable/cart_shadow"
-    android:orientation="vertical"
-    android:padding="0dp">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal"
-        android:padding="15dp">
 
-        <LinearLayout
-            android:layout_width="0dp"
+    <RelativeLayout
+        android:id="@+id/mainview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar_wishlist" />
+
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_above="@+id/navigation"
+            android:layout_below="@+id/toolbar"
             android:orientation="vertical">
 
-
-            <LinearLayout
+            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_horizontal|center_vertical"
+                android:gravity="center_vertical|center_horizontal"
                 android:orientation="vertical">
-
-
-                <ImageView
-                    android:id="@+id/itemIconHomePage"
+                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@android:color/holo_orange_dark" />
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="4"
-            android:orientation="vertical">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_marginBottom="5dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/prd_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginTop="4dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:gravity="left"
-                    android:text="FRESHO"
-                    android:textSize="20dp"
-                    android:textColor="@android:color/black" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="5dp">
-
-                <TextView
-                    android:id="@+id/qntyHomePage"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/headingTxtHomePage"
-                    android:fontFamily="@font/roboto_medium"
-                    android:textColor="@color/blackshadow"
-                    android:textSize="20dp"
-                    android:text="1Kg" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:layout_marginBottom="5dp"
+                    android:background="#e1e1e1"
                     android:orientation="vertical">
 
+                <LinearLayout
+                    android:id="@+id/llDisplayBarWishList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/grey"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
                     <TextView
-                        android:id="@+id/priceOldHomePage"
+                        android:id="@+id/veggiesWishListTitle"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/strike_through"
-                        android:fontFamily="@font/roboto_regular"
-                        android:text="Rs.80"
-                        android:textColor="@color/blackshadow"
+                        android:layout_height="30dp"
+                        android:layout_weight="9"
+                        android:fontFamily="@font/roboto_medium"
+                        android:text="Veggies"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/black"
                         android:textSize="15dp" />
 
                     <TextView
-                        android:id="@+id/priceNewHomePage"
+                        android:id="@+id/totalWishList"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="Rs.50"
-                        android:textColor="@color/light_black"
-                        android:textSize="18dp" />
+                        android:layout_height="30dp"
+                        android:layout_gravity="right"
+                        android:fontFamily="@font/roboto_medium"
+                        android:text="6 items"
+                        android:textColor="@color/black"
+                        android:textSize="15dp" />
                 </LinearLayout>
 
-            </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/llDisplayBarWishList">
+
+                <com.mindorks.placeholderview.PlaceHolderView
+                    android:id="@+id/list_items"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="vertical" />
+                </LinearLayout>
+                </RelativeLayout>
+
+            </FrameLayout>
+
+
         </LinearLayout>
-<LinearLayout
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:layout_weight="4"
-    android:orientation="vertical">
-    <LinearLayout
-        android:id="@+id/lldeletebtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginLeft="10dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
 
 
-        <Button
-            android:id="@+id/btn_deleteWishList"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="right"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/settings"
-            android:fontFamily="@font/roboto_medium"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="13dp"
-            />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-      android:layout_gravity="right"
-        android:layout_weight="1">
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@color/whiteshadow"
+            app:itemIconTint="@color/colorPrimary"
+            app:itemTextColor="@color/colorPrimary"
+            app:menu="@menu/bottom_navigation" />
 
 
-        <Button
-            android:id="@+id/btn_movetoCartWishList"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
+    </RelativeLayout>
 
-            android:layout_marginTop="10dp"
-            android:background="@drawable/button_border_add"
-            android:fontFamily="@font/roboto_medium"
-            android:text="Move to Cart"
-            android:textAllCaps="false"
-            android:layout_gravity="bottom|right"
-            android:textColor="@color/white"
-            android:textSize="13dp"
-            />
+</android.support.v4.widget.DrawerLayout>
 
-    </LinearLayout>
-
-</LinearLayout>
-
-
-    </LinearLayout>
-
-
-
-</LinearLayout>
