--- a/app/src/main/res/layout/my_notifications.xml
+++ b/app/src/main/res/layout/my_notifications.xml
@@ -33,7 +33,9 @@
 
         </com.mindorks.placeholderview.PlaceHolderView>
 
-
+        <include
+            android:id="@+id/navigation"
+            layout="@layout/bottom_navigation_main" />
 
     </RelativeLayout>
 </LinearLayout>
