--- a/app/src/main/res/layout/home_2_category.xml
+++ b/app/src/main/res/layout/home_2_category.xml
@@ -23,14 +23,14 @@
             android:layout_above="@+id/navigation"
             android:layout_below="@+id/toolbar"
             android:orientation="vertical">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
 
 
-
-</LinearLayout>
+            </LinearLayout>
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
@@ -50,8 +50,7 @@
                 android:id="@+id/pager"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
-                android:layout_below="@id/tab_layout"
-              />
+                android:layout_below="@id/tab_layout" />
 
 
         </LinearLayout>
