--- a/app/src/main/res/layout/home_category_grid_item.xml
+++ b/app/src/main/res/layout/home_category_grid_item.xml
@@ -2,105 +2,112 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ord_itCategoryGrid"
-    android:layout_width="150dp"
-    android:layout_height="230dp"
-    android:layout_marginBottom="10dp"
+    android:layout_width="180dp"
+    android:layout_height="280dp"
+    android:layout_margin="5dp"
     android:background="@drawable/cart_shadow"
-    android:orientation="vertical"
-    android:padding="0dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@drawable/shadow"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/titleCategoryGrid"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="8"
-                android:fontFamily="@font/roboto_bold"
-                android:text="Potato"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/light_black"
-                android:textSize="20dp" />
-
-            <ImageButton
-                android:id="@+id/likeCategoryGrid"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:src="@drawable/ic_insert_emoticon_black_24dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/imageCategoryGrid"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:src="@drawable/deep" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp">
+                android:layout_height="60dp"
+                android:orientation="horizontal">
 
-                <Spinner
-                    android:id="@+id/qtyCategoryGrid"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/titleCategoryGrid"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:fontFamily="@font/roboto_medium"
-                    android:gravity="center"
-                    android:text="100Gms"
+                    android:layout_weight="8"
+                    android:fontFamily="@font/roboto_bold"
+                    android:text="Potato"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/light_black"
-                    android:textSize="12dp" />
+                    android:textSize="15dp" />
+
+                <ImageButton
+                    android:id="@+id/likeCategoryGrid"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="2"
+                    android:background="@drawable/ic_insert_emoticon_black_24dp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:orientation="horizontal">
+                android:layout_height="90dp"
+                android:gravity="center">
 
-                <TextView
-                    android:id="@+id/newPriceCategoryGrid"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:fontFamily="@font/roboto_medium"
-                    android:gravity="center"
-                    android:text="50"
-                    android:textColor="@color/light_black"
-                    android:textSize="15dp" />
+                <ImageView
+                    android:id="@+id/imageCategoryGrid"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:src="@drawable/deep" />
+            </LinearLayout>
 
-                <TextView
-                    android:id="@+id/oldPriceCategoryGrid"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/strike_through"
-                    android:fontFamily="@font/roboto_regular"
-                    android:gravity="center"
-                    android:text="Rs. 80"
-                    android:textColor="@color/blackshadow"
-                    android:textSize="12dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:gravity="center">
+
+                    <Spinner
+                        android:id="@+id/qtyCategoryGrid"
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto_medium"
+                        android:gravity="center"
+                        android:text="100Gms"
+                        android:textColor="@color/light_black"
+                        android:textSize="12dp"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/newPriceCategoryGrid"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2"
+                        android:fontFamily="@font/roboto_medium"
+                        android:gravity="center"
+                        android:text="50"
+                        android:textColor="@color/light_black"
+                        android:textSize="15dp" />
+
+                    <TextView
+                        android:id="@+id/oldPriceCategoryGrid"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/strike_through"
+                        android:fontFamily="@font/roboto_regular"
+                        android:gravity="center"
+                        android:text="Rs. 80"
+                        android:textColor="@color/blackshadow"
+                        android:textSize="12dp" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
 
@@ -118,7 +125,7 @@
                 android:text="Add To Cart"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
-                android:textSize="13dp" />
+                android:textSize="15dp" />
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
